--- a/A2/A2.tex
+++ b/A2/A2.tex
@@ -9,5 +9,288 @@
 \usepackage[dvipdfmx, x11names]{xcolor}
 
 \begin{document}
+\section{目的}
+　オペアンプはアナログ回路において広く使われている増幅器である. %
+オペアンプの基本的な回路特性の測定を行い, その動作について理解を深める.
+
+\section{原理}
+オペアンプは, 非常に大きな直流電圧利得を持つ差動増幅器であり, アナログ回路設計における基本素子として広く利用される. %
+オペアンプは電源（通常 $\pm 15\ \mathrm{V}$）を必要とし, %
+増幅回路, 加減算回路, 微積分回路, フィルタ回路, 信号処理回路, 波形発生回路等を構成できる.
+
+\subsection{基本構造と動作原理}
+オペアンプの回路記号は三角形で表され, 左側に2つの入力端子（反転入力 $-$、非反転入力 $+$）, %
+右側に出力端子がある. 入力端子の電圧を $V_1$（反転入力）, $V_2$（非反転入力）, 出力電圧を $V_out$ とすると, %
+次の関係が成り立つ.
+
+\begin{equation}
+V_{out} = A (V_2 - V_1)
+\end{equation}
+
+\noindent
+ここで, $A$ はオペアンプの電圧利得であり直流信号や低周波交流信号に対して %
+$10^5 \sim 10^6$ 程度の非常に大きな値を持つ. 周波数が高くなると利得は減少し,%
+1MHz～10MHz程度で利得は1となる.
+
+\subsection{理想オペアンプの特性}
+理想的なオペアンプは以下の特性を持つ.
+\begin{enumerate}
+    \item 電圧の入出力関係は $V_{out} = A (V_2 - V_1)$ であり, $A \gg 1$.
+    \item 入力端子に電流は流れない（入力インピーダンスは $\infty$）.
+    \item 出力電圧は負荷に影響されない（出力インピーダンスは $0$）.
+\end{enumerate}
+
+\subsection{帰還回路の必要性}
+オペアンプを開ループ（帰還なし）で使用すると, 利得が非常に大きいため, %
+わずかな入力で出力が飽和する. このため, 実際には負帰還回路を用いて安定した動作を実現する.
+負帰還では, 出力の一部を入力に戻し, 入力との差を増幅することで回路の利得を制御する.
+
+\subsection{非反転増幅回路}
+図2-1に示す非反転増幅回路では, 入力電圧を $V_{in}$ とすると, 出力電圧 $V_{out}$ は次のようになる.
+
+\begin{equation}
+V_{out} \approx \left( 1 + \frac{R_2}{R_1} \right) V_{in}
+\end{equation}
+
+\subsection{反転増幅回路}
+図2-2に示す反転増幅回路では, 入力電圧 $V_{in}$ に対して出力電圧 $V_{out}$ は次のようになる.
+
+\begin{equation}
+V_{out} = - \frac{R_2}{R_1} V_{in}
+\end{equation}
+
+この場合、入力と出力の極性が反転し, 抵抗比 $R_2 / R_1$ が電圧利得となる.
+
+\section{実験手順}
+\subsection{準備}
+\subsubsection{実験装置について}
+本実験では図3-1のオペアンプ実験装置を用いる. 各スイッチの機能は以下の通りである.
+\begin{itemize}
+    \item S1: 実験装置の主電源.
+    \item S2: オペアンプIC1～IC4への電源電圧切替. INTで内部電源, EXTで外部電源, OFFで電源遮断. 本実験ではINTを使用.
+    \item S3: 入力回路に電解コンデンサを挿入するか直接入力するかを切替.
+    \item S4: INPUT端子からの入力と可変抵抗RVからの入力を切替. RVを調整することで-15V～15Vの可変直流電圧を得る.
+    \item S5: DCデジタル電圧計への入力回路切替.
+    \item S6: DCデジタル電圧計のレンジ切替. Vレンジは-19.9V～19.9V, mVレンジは-199.9mV～199.9mV.
+\end{itemize}
+
+\begin{figure}[H]
+    \centering
+    \captionsetup{labelformat=empty}
+    \includegraphics[width=10cm]{Pictures/equipment.png}
+    \caption{図3-1: 実験装置}
+\end{figure}
+
+
+\subsubsection{DCデジタル電圧計の接続}
+オペアンプIC1を用いて入出力特性を測定する. 図3-1において, マイナス端子T22は接地T20へ, プラス端子T23はT24へ接続し, %
+IC1の入力電圧測定箇所T1とT25, 出力電圧測定箇所T4とT26を配線する.
+
+\subsubsection{オフセット調整}
+回路を配線後, 入力端子を接地し入力電圧を0Vにした状態で, オフセット調整用抵抗RV1を用いて出力電圧が0Vになるよう調整する.%
+
+\subsection{実験1: 直流増幅回路の入出力特性}
+図3-2に示す増幅度10(左)および増幅度100(右)の反転増幅回路を用い, 入力電圧を変化させて出力電圧を測定する.%
+増幅度10の回路では, 入力電圧を$-15 V \sim 15 V$で, 増幅度100の回路では$-1.5 V \sim 1.5 V$で変化させる.
+
+\begin{figure}[H]
+    \centering
+    \captionsetup{labelformat=empty}
+    \includegraphics[width=10cm]{Pictures/invert_amp.png}
+    \caption{図3-2: 反転増幅回路(左 : 増幅度10, 右 : 増幅度100)}
+\end{figure}
+
+
+\subsection{実験2: 交流増幅回路の周波数特性}
+図3-3の増幅度10の交流反転増幅回路に正弦波信号を入力し, 周波数を変化させて出力電圧の振幅を測定する. %
+入力振幅は0.1V, 0.2V, 0.4V, 0.8V, 1.0Vの5パターンで実験する. 出力波形のひずみが始まる周波数も記録する.%
+
+\subsection{実験3: 絶対値増幅回路の入出力特性}
+図3-4のオペアンプとダイオードを組み合わせた回路を用い, 直流入力電圧を変化させて出力電圧を測定する.%
+入力電圧は$-14 V \sim 14 V$で変化させる.
+
+\begin{figure}[H]
+    \centering
+    \captionsetup{labelformat=empty}
+    \includegraphics[width=10cm]{Pictures/abs_amp.png}
+    \caption{図3-4: 絶対値増幅回路}
+\end{figure}
+
+\begin{figure}
+    
+\end{figure}
+
+\subsection{実験4: ローパスフィルタの周波数特性}
+図および図に示す遮断周波数約1kHzの2次形および4次形ローパスフィルタの周波数特性を測定する.%
+
+\subsection{実験5: ハイパスフィルタの周波数特性}
+図に示す遮断周波数約1kHzの2次形ハイパスフィルタの周波数特性を測定する.%
+
+\section{実験結果}
+\subsection{実験1}
+　実験1の増幅率10の反転増幅回路で得られた結果を以下に表4-1として示す.
+\begin{table}[H]
+    \centering
+    \captionsetup{labelformat=empty}
+    \caption{表4-1: 入力電圧と出力電圧の関係}
+    \begin{tabular}{|c|c|}
+    \hline
+    $V_{in}$(mV) & $V_{out}$(V) \\
+    \hline
+    1500 & -12.23 \\
+    1400 & -12.23 \\
+    1310 & -12.22 \\
+    1200 & -12.15 \\
+    1100 & -11.15 \\
+    1010 & -10.20 \\
+    900.0 & -9.160 \\
+    800.0 & -8.150 \\
+    700.0 & -7.190 \\
+    600.0 & -6.080 \\
+    500.0 & -5.110 \\
+    400.0 & -4.120 \\
+    300.0 & -3.130 \\
+    190.0 & -2.010 \\
+    100.0 & -1.010 \\
+    0.000 & 0.000 \\
+    -100.0 & 1.050 \\
+    -200.0 & 1.980 \\
+    -300.0 & 3.020 \\
+    -400.0 & 3.960 \\
+    -500.0 & 5.000 \\
+    -600.0 & 5.970 \\
+    -700.0 & 7.020 \\
+    -800.0 & 7.990 \\
+    -900.0 & 9.030 \\
+    -1000 & 10.00 \\
+    -1100 & 11.04 \\
+    -1200 & 11.99 \\
+    -1300 & 13.02 \\
+    -1400 & 13.38 \\
+    -1500 & 13.38 \\
+    \hline
+    \end{tabular}
+\end{table}
+
+\noindent
+また, 以下に, 図4-1として, 表4-1のデータをプロットした図を示す.
+\begin{figure}[H]
+    \centering
+    \captionsetup{labelformat=empty}
+    \includegraphics[width=10cm]{Pictures/amp10.png}
+    \caption{図4-1: 反転増幅回路(増幅度10)}
+\end{figure}
+
+\noindent
+同様に, 増幅率10の反転増幅回路で得られた結果を以下に表4-2として示す.
+\begin{table}[H]
+    \centering
+    \captionsetup{labelformat=empty}
+    \caption{表4-2: 入力電圧と出力電圧の関係}
+    \begin{tabular}{|c|c|}
+        \hline
+        $V_{in}$(mV) & $V_{out}$(V) \\
+        \hline
+        149.5 & -12.21 \\
+        144.2 & -12.21 \\
+        132.0 & -12.19 \\
+        120.2 & -12.18 \\
+        111.5 & -12.07 \\
+        103.4 & -11.23 \\
+        90.20 & -9.850 \\
+        82.20 & -9.000 \\
+        69.80 & -7.730 \\
+        60.30 & -6.720 \\
+        51.30 & -5.800 \\
+        41.00 & -4.710 \\
+        30.60 & -3.630 \\
+        20.00 & -2.520 \\
+        9.800 & -1.460 \\
+        0.900 & -0.560 \\
+        -8.500 & 0.420 \\
+        -19.20 & 1.530 \\
+        -30.00 & 2.630 \\
+        -40.10 & 3.660 \\
+        -51.60 & 4.830 \\
+        -58.70 & 5.550 \\
+        -73.00 & 7.010 \\
+        -80.20 & 7.740 \\
+        -89.70 & 8.730 \\
+        -102.0 & 9.970 \\
+        -109.1 & 10.68 \\
+        -119.5 & 11.75 \\
+        -130.2 & 12.84 \\
+        -139.8 & 13.40 \\
+        -148.7 & 13.40 \\
+        \hline
+    \end{tabular}
+\end{table}
+
+\noindent
+また, 以下に, 図4-2として, 表4-2のデータをプロットした図を示す.
+\begin{figure}[H]
+    \centering
+    \captionsetup{labelformat=empty}
+    \includegraphics[width=10cm]{Pictures/amp100.png}
+    \caption{図4-2: 反転増幅回路(増幅度100)}
+\end{figure}
+
+\section{実験3}
+　実験3で得られた結果を以下に表4-4として示す.
+\begin{table}[H]
+    \centering
+    \captionsetup{labelformat=empty}
+    \caption{表4-2: 入力電圧と出力電圧の関係}
+    \begin{tabular}{|c|c|}
+        \hline
+        $V_{in}$(mV) & $V_{out}$(V) \\
+        \hline
+        13.95 & 10.04 \\
+        13.08 & 10.92 \\
+        12.04 & 11.91 \\
+        11.03 & 11.08 \\
+        10.09 & 10.15 \\
+        8.990 & 9.040 \\
+        8.020 & 8.040 \\
+        7.000 & 7.050 \\
+        6.000 & 6.040 \\
+        5.000 & 5.040 \\
+        4.000 & 4.040 \\
+        3.000 & 3.040 \\
+        2.000 & 2.040 \\
+        1.000 & 1.030 \\
+        0.010 & 0.040 \\
+        -1.000 & 1.020 \\
+        -2.000 & 2.010 \\
+        -3.000 & 3.010 \\
+        -4.000 & 4.010 \\
+        -5.000 & 5.020 \\
+        -6.000 & 6.010 \\
+        -7.000 & 7.020 \\
+        -8.000 & 8.010 \\
+        -9.000 & 9.020 \\
+        -10.00 & 10.02 \\
+        -11.00 & 11.01 \\
+        -12.00 & 12.01 \\
+        -13.00 & 13.02 \\
+        -14.00 & 13.72 \\
+        \hline
+    \end{tabular}
+\end{table}
+
+\noindent
+また, 以下に, 図4-4として, 表4-4のデータをプロットした図を示す.
+\begin{figure}[H]
+    \centering
+    \captionsetup{labelformat=empty}
+    \includegraphics[width=10cm]{Pictures/abs.png}
+    \caption{図4-4: 絶対値増幅回路}
+\end{figure}
+
+
+
+\section{考察課題}
+\section{結論}
+\section{参考文献}
 
 \end{document}
